vendor/bifrost/tls/bindings/ssl.odin


	// SSL_has_pending returns one if |ssl| has buffered, decrypted bytes available
	// for read, or if |ssl| has buffered data from the transport that has not yet
	// been decrypted. If |ssl| has neither, this function returns zero.
	//
	// In TLS, BoringSSL does not implement read-ahead, so this function returns one
	// if and only if |SSL_pending| would return a non-zero value. In DTLS, it is
	// possible for this function to return one while |SSL_pending| returns zero.
	// For example, |SSL_read| may read a datagram with two records, decrypt the
	// first, and leave the second buffered for a subsequent call to |SSL_read|.
	//
	// As a result, if this function returns one, the next call to |SSL_read| may
	// still fail, read from the transport, or both. The buffered, undecrypted data
	// may be invalid or incomplete.
	SSL_has_pending :: proc(ssl: ^SSL) -> i32 ---

	// SSL_write writes up to |num| bytes from |buf| into |ssl|. It implicitly runs
	// any pending handshakes, including renegotiations when enabled. On success, it
	// returns the number of bytes written. Otherwise, it returns <= 0. The caller
	// should pass the value into |SSL_get_error| to determine how to proceed.
	//
	// In TLS, a non-blocking |SSL_write| differs from non-blocking |write| in that
	// a failed |SSL_write| still commits to the data passed in. When retrying, the
	// caller must supply the original write buffer (or a larger one containing the
	// original as a prefix). By default, retries will fail if they also do not
	// reuse the same |buf| pointer. This may be relaxed with
	// |SSL_MODE_ACCEPT_MOVING_WRITE_BUFFER|, but the buffer contents still must be
	// unchanged.
	//
	// By default, in TLS, |SSL_write| will not return success until all |num| bytes
	// are written. This may be relaxed with |SSL_MODE_ENABLE_PARTIAL_WRITE|. It
	// allows |SSL_write| to complete with a partial result when only part of the
	// input was written in a single record.
	//
	// In DTLS, neither |SSL_MODE_ACCEPT_MOVING_WRITE_BUFFER| and
	// |SSL_MODE_ENABLE_PARTIAL_WRITE| do anything. The caller may retry with a
	// different buffer freely. A single call to |SSL_write| only ever writes a
	// single record in a single packet, so |num| must be at most
	// |SSL3_RT_MAX_PLAIN_LENGTH|.
	//
	// TODO(davidben): Ensure 0 is only returned on transport EOF.
	// https://crbug.com/466303.
	SSL_write :: proc(ssl: ^SSL, buf: rawptr, num: i32) -> i32 ---
}

// SSL_KEY_UPDATE_REQUESTED indicates that the peer should reply to a KeyUpdate
// message with its own, thus updating traffic secrets for both directions on
// the connection.
SSL_KEY_UPDATE_REQUESTED :: 1

// SSL_KEY_UPDATE_NOT_REQUESTED indicates that the peer should not reply with
// it's own KeyUpdate message.
SSL_KEY_UPDATE_NOT_REQUESTED :: 0

@(default_calling_convention="c")
foreign lib {
	// SSL_key_update queues a TLS 1.3 KeyUpdate message to be sent on |ssl|
	// if one is not already queued. The |request_type| argument must one of the
	// |SSL_KEY_UPDATE_*| values. This function requires that |ssl| have completed a
	// TLS >= 1.3 handshake. It returns one on success or zero on error.
	//
	// Note that this function does not _send_ the message itself. The next call to
	// |SSL_write| will cause the message to be sent. |SSL_write| may be called with
	// a zero length to flush a KeyUpdate message when no application data is
	// pending.
	SSL_key_update :: proc(ssl: ^SSL, request_type: i32) -> i32 ---

	// SSL_shutdown shuts down |ssl|. It runs in two stages. First, it sends
	// close_notify and returns zero or one on success or -1 on failure. Zero
	// indicates that close_notify was sent, but not received, and one additionally
	// indicates that the peer's close_notify had already been received.
	//
	// To then wait for the peer's close_notify, run |SSL_shutdown| to completion a
	// second time. This returns 1 on success and -1 on failure. Application data
	// is considered a fatal error at this point. To process or discard it, read
	// until close_notify with |SSL_read| instead.
	//
	// In both cases, on failure, pass the return value into |SSL_get_error| to
	// determine how to proceed.
	//
	// Most callers should stop at the first stage. Reading for close_notify is
	// primarily used for uncommon protocols where the underlying transport is
	// reused after TLS completes. Additionally, DTLS uses an unordered transport
	// and is unordered, so the second stage is a no-op in DTLS.
	SSL_shutdown :: proc(ssl: ^SSL) -> i32 ---

	// SSL_CTX_set_quiet_shutdown sets quiet shutdown on |ctx| to |mode|. If
	// enabled, |SSL_shutdown| will not send a close_notify alert or wait for one
	// from the peer. It will instead synchronously return one.
	SSL_CTX_set_quiet_shutdown :: proc(ctx: ^SSL_CTX, mode: i32) ---

	// SSL_CTX_get_quiet_shutdown returns whether quiet shutdown is enabled for
	// |ctx|.
	SSL_CTX_get_quiet_shutdown :: proc(ctx: ^SSL_CTX) -> i32 ---

	// SSL_set_quiet_shutdown sets quiet shutdown on |ssl| to |mode|. If enabled,
	// |SSL_shutdown| will not send a close_notify alert or wait for one from the
	// peer. It will instead synchronously return one.
	SSL_set_quiet_shutdown :: proc(ssl: ^SSL, mode: i32) ---

	// SSL_get_quiet_shutdown returns whether quiet shutdown is enabled for
	// |ssl|.
	SSL_get_quiet_shutdown :: proc(ssl: ^SSL) -> i32 ---

	// SSL_get_error returns a |SSL_ERROR_*| value for the most recent operation on
	// |ssl|. It should be called after an operation failed to determine whether the
	// error was fatal and, if not, when to retry.
	SSL_get_error :: proc(ssl: ^SSL, ret_code: i32) -> i32 ---
}

// SSL_ERROR_NONE indicates the operation succeeded.
SSL_ERROR_NONE :: 0

// SSL_ERROR_SSL indicates the operation failed within the library. The caller
// may inspect the error queue (see |ERR_get_error|) for more information.
SSL_ERROR_SSL :: 1

// SSL_ERROR_WANT_READ indicates the operation failed attempting to read from
// the transport. The caller may retry the operation when the transport is ready
// for reading.
SSL_ERROR_WANT_READ :: 2

// SSL_ERROR_WANT_WRITE indicates the operation failed attempting to write to
// the transport. The caller may retry the operation when the transport is ready
// for writing.
SSL_ERROR_WANT_WRITE :: 3

// SSL_ERROR_WANT_X509_LOOKUP indicates the operation failed in calling the
// |cert_cb| or |client_cert_cb|. The caller may retry the operation when the
// callback is ready to return a certificate or one has been configured
// externally.
//
// See also |SSL_CTX_set_cert_cb| and |SSL_CTX_set_client_cert_cb|.
SSL_ERROR_WANT_X509_LOOKUP :: 4

// SSL_ERROR_SYSCALL indicates the operation failed externally to the library.
// The caller should consult the system-specific error mechanism. This is
// typically |errno| but may be something custom if using a custom |BIO|. It
// may also be signaled if the transport returned EOF, in which case the
// operation's return value will be zero.
SSL_ERROR_SYSCALL :: 5

// SSL_ERROR_ZERO_RETURN indicates the operation failed because the connection
// was cleanly shut down with a close_notify alert.
SSL_ERROR_ZERO_RETURN :: 6

// SSL_ERROR_WANT_CONNECT indicates the operation failed attempting to connect
// the transport (the |BIO| signaled |BIO_RR_CONNECT|). The caller may retry the
// operation when the transport is ready.
SSL_ERROR_WANT_CONNECT :: 7

// SSL_ERROR_WANT_ACCEPT indicates the operation failed attempting to accept a
// connection from the transport (the |BIO| signaled |BIO_RR_ACCEPT|). The
// caller may retry the operation when the transport is ready.
//
// TODO(davidben): Remove this. It's used by accept BIOs which are bizarre.
SSL_ERROR_WANT_ACCEPT :: 8

// SSL_ERROR_WANT_CHANNEL_ID_LOOKUP is never used.
//
// TODO(davidben): Remove this. Some callers reference it when stringifying
// errors. They should use |SSL_error_description| instead.
SSL_ERROR_WANT_CHANNEL_ID_LOOKUP :: 9

// SSL_ERROR_PENDING_SESSION indicates the operation failed because the session
// lookup callback indicated the session was unavailable. The caller may retry
// the operation when lookup has completed.
//
// See also |SSL_CTX_sess_set_get_cb| and |SSL_magic_pending_session_ptr|.
SSL_ERROR_PENDING_SESSION :: 11

// SSL_ERROR_PENDING_CERTIFICATE indicates the operation failed because the
// early callback indicated certificate lookup was incomplete. The caller may
// retry the operation when lookup has completed.
//
// See also |SSL_CTX_set_select_certificate_cb|.
SSL_ERROR_PENDING_CERTIFICATE :: 12

// SSL_ERROR_WANT_PRIVATE_KEY_OPERATION indicates the operation failed because
// a private key operation was unfinished. The caller may retry the operation
// when the private key operation is complete.
//
// See also |SSL_set_private_key_method|, |SSL_CTX_set_private_key_method|, and
// |SSL_CREDENTIAL_set_private_key_method|.
SSL_ERROR_WANT_PRIVATE_KEY_OPERATION :: 13

// SSL_ERROR_PENDING_TICKET indicates that a ticket decryption is pending. The
// caller may retry the operation when the decryption is ready.
//
// See also |SSL_CTX_set_ticket_aead_method|.
SSL_ERROR_PENDING_TICKET :: 14

// SSL_ERROR_EARLY_DATA_REJECTED indicates that early data was rejected. The
// caller should treat this as a connection failure and retry any operations
// associated with the rejected early data. |SSL_reset_early_data_reject| may be
// used to reuse the underlying connection for the retry.
SSL_ERROR_EARLY_DATA_REJECTED :: 15

// SSL_ERROR_WANT_CERTIFICATE_VERIFY indicates the operation failed because
// certificate verification was incomplete. The caller may retry the operation
// when certificate verification is complete.
//
// See also |SSL_CTX_set_custom_verify|.
SSL_ERROR_WANT_CERTIFICATE_VERIFY :: 16
SSL_ERROR_HANDOFF                 :: 17
SSL_ERROR_HANDBACK                :: 18

// SSL_ERROR_WANT_RENEGOTIATE indicates the operation is pending a response to
// a renegotiation request from the server. The caller may call
// |SSL_renegotiate| to schedule a renegotiation and retry the operation.
//
// See also |ssl_renegotiate_explicit|.
SSL_ERROR_WANT_RENEGOTIATE :: 19

// SSL_ERROR_HANDSHAKE_HINTS_READY indicates the handshake has progressed enough
// for |SSL_serialize_handshake_hints| to be called. See also
// |SSL_request_handshake_hints|.
SSL_ERROR_HANDSHAKE_HINTS_READY :: 20

@(default_calling_convention="c")
foreign lib {
	// SSL_error_description returns a string representation of |err|, where |err|
	// is one of the |SSL_ERROR_*| constants returned by |SSL_get_error|, or NULL
	// if the value is unrecognized.
	SSL_error_description :: proc(err: i32) -> cstring ---

	// DTLSv1_set_initial_timeout_duration sets the initial duration for a DTLS
	// handshake timeout.
	//
	// This duration overrides the default of 400 milliseconds, which is
	// recommendation of RFC 9147 for real-time protocols.
	//
	// If |ssl| is an open connection, this function may update currently running
	// timers and may make them expire. Callers should call
	// |DTLSv1_get_timeout| for an updated timeout and reschedule accordingly.
	DTLSv1_set_initial_timeout_duration :: proc(ssl: ^SSL, duration_ms: u32) ---
}

// Protocol versions.
DTLS1_VERSION_MAJOR :: 0xfe
SSL3_VERSION_MAJOR  :: 0x03
SSL3_VERSION        :: 0x0300
TLS1_VERSION        :: 0x0301
TLS1_1_VERSION      :: 0x0302
TLS1_2_VERSION      :: 0x0303
TLS1_3_VERSION      :: 0x0304
DTLS1_VERSION       :: 0xfeff
DTLS1_2_VERSION     :: 0xfefd
DTLS1_3_VERSION     :: 0xfefc

@(default_calling_convention="c")
foreign lib {
	// SSL_CTX_set_min_proto_version sets the minimum protocol version for |ctx| to
	// |version|. If |version| is zero, the default minimum version is used. It
	// returns one on success and zero if |version| is invalid.
	SSL_CTX_set_min_proto_version :: proc(ctx: ^SSL_CTX, version: u16) -> i32 ---
